[package]
name = "linked-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = {version = "15.1", optional = true}
indexmap = {version = "1.9", optional = true}
dashmap = {version = "5.4", optional = true}
radix_trie = {version = "0.2", optional = true}
sled = {version = "0.34", optional = true}
